Mon Jun 30 12:41:00 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Process.h:
        * ace/Process.cpp:

          Added an option to ACE_Process_Options to use a wchar_t environmet
          buffer instead of char.  This is useful only on Windows with
          ACE_USES_WCHAR undefined.  The benefit of using a wchar_t
          environment buffer is that it is not limited to 32kb as a char
          environment buffer is.

          In ACE_Process::spawn(), convert the char environment buffer to a
          wchar_t environment buffer if specified to do so in the process
          options.

        * tests/Process_Env_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:

          Added a test for the above feature.

Fri Jun 27 18:04:52 UTC 2008  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/rules.local.GNU: Removed the first setting of
          CLEANUP_OBJS by itself - it was a duplicate of what's done in
          CLEANUP_BIN's case, but with possibly an incorrect objext. Prevents
          a main executable's object file from being deleted twice and ensures
          only valid object file extension is used. Thanks to Howard Finer
          for pointing this out.

Fri Jun 27 16:08:27 UTC 2008  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/rules.local.GNU: Add $(VOBJS) to CLEANUP_OBJS to
          be sure all objects that go into a binary are cleaned up.

Fri Jun 27 15:35:58 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/modules/AutomakeWorkspaceHelper.pm:

          Changed TAO_IDLFLAGS to Rename executable from gperf to
          ace_gperf.

Fri Jun 27 14:58:17 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Control/Solaris_Network_Interface_Monitor.h:

          Changed ACE_CString member to ACE_TString, to accommodate
          wchar builds.

Thu Jun 26 20:41:20 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
